JSW Devsb/src/objects/Customer_ShipToParty__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CustomersShipToPartys</relationshipLabel>
        <relationshipName>CustomersShipToPartys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party_Nmae__c</fullName>
        <formula>Ship_To_Party__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Party Nmae</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Party__c</fullName>
        <label>Ship To Party</label>
        <referenceTo>Ship_To_Party__c</referenceTo>
        <relationshipLabel>CustomersShipToPartys</relationshipLabel>
        <relationshipName>CustomersShipToPartys</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Customer&amp;ShipToParty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CS-{0000000}</displayFormat>
        <label>Customer&amp;ShipToParty Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomersShipToPartys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>